상점기능 수정
