# swagger-output.json
@@ -9048,6 +9048,159 @@
           }
         }
       }
+    },
+    "/shop/equip-item": {
+      "post": {
+        "tags": [
+          "Shop"
+        ],
+        "summary": "아이템 장착 API",
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "아이템 장착 성공",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "isSuccess": {
+                      "type": "boolean",
+                      "example": true
+                    },
+                    "code": {
+                      "type": "number",
+                      "example": 200
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "success!"
+                    },
+                    "result": {
+                      "type": "object",
+                      "properties": {
+                        "success": {
+                          "type": "boolean",
+                          "example": true
+                        },
+                        "message": {
+                          "type": "string",
+                          "example": "닉네임 변경권 아이템을 장착했습니다."
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "토큰 형식 오류",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "isSuccess": {
+                    "type": "boolean",
+                    "example": false
+                  },
+                  "code": {
+                    "type": "string",
+                    "example": "TOKEN_FORMAT_INCORRECT"
+                  },
+                  "message": {
+                    "type": "string",
+                    "example": "토큰 형식이 올바르지 않습니다."
+                  },
+                  "result": {
+                    "type": "object",
+                    "nullable": true
+                  }
+                }
+              }
+            }
+          },
+          "403": {
+            "description": "Forbidden"
+          },
+          "404": {
+            "description": "존재하지 않는 아이템",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "isSuccess": {
+                      "type": "boolean",
+                      "example": false
+                    },
+                    "code": {
+                      "type": "string",
+                      "example": "SHOP4041"
+                    },
+                    "message": {
+                      "type": "string",
+                      "example": "존재하지 않는 아이템입니다."
+                    },
+                    "result": {
+                      "type": "object",
+                      "nullable": true
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "서버 오류",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "isSuccess": {
+                    "type": "boolean",
+                    "example": false
+                  },
+                  "code": {
+                    "type": "string",
+                    "example": "COMMON000"
+                  },
+                  "message": {
+                    "type": "string",
+                    "example": "서버 에러, 관리자에게 문의 바랍니다."
+                  },
+                  "result": {
+                    "type": "object",
+                    "nullable": true
+                  }
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "BearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "required": [
+                  "itemId"
+                ],
+                "properties": {
+                  "itemId": {
+                    "type": "number",
+                    "example": 1
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
